fix mobile hero alignment

--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ section {
 }
 
 .hero-text {
-    /* margin-left: 4rem; */
+    margin-left: 2rem;
     flex: 1;
 }
 
